# SPDX-License-Identifier: Apache-2.0

[package]
name = "go-http"
version = "0.1.1"
edition = "2024"
authors = ["berryware"]
description = "rust native port of GO's http module"
license = "Apache-2.0"
keywords = ["http", "http-server", "http-client"]
repository = "https://github.com/exaxisllc/go-lib"
readme = "README.md"
exclude = ["target"]
categories = ["http"]

[dependencies]
go-lib = "0.6.2"
go-lib-macros = "0.6.2"
url = "2"
base64 = "0.22"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
